# xmeshnet

./: .gitignore  CMakeLists.txt  README.md
.github/prompts/: canary.prompt.md  this.prompt.md
cloud/api/: package.json
cloud/api/src/: commands.ts  devices.ts  meshes.ts  server.ts  telemetry.ts
cloud/db/: schema.sql
cloud/mqtt/: acl.conf  topics.md
dashboard/: package.json
firmware/: CMakeLists.txt  README.md
firmware/common/include/: x_config.h  x_node_identity.h  x_protocol.h  x_security.h
firmware/common/src/: x_config.c  x_node_identity.c  x_protocol.c  x_security.c
firmware/gateway/: CMakeLists.txt
firmware/gateway/main/: gateway_app.c  gateway_app.h  main.c  mesh_root.c  mesh_root.h  mqtt_client.c  mqtt_client.h  node_registry.c  node_registry.h  ota_manager.c  ota_manager.h  web_admin.c  web_admin.h
firmware/node/: CMakeLists.txt
firmware/node/main/: main.c  mesh_client.c  node_app.c  node_app.h  power.c  sensors.c
main/: CMakeLists.txt  app_config.h  messages.h
resources/mesh/internal_communication/: sdkconfig
tools/: flash_gateway.sh  flash_node.sh  make_firmware_manifest.py  provision_device.py
